Fixed alignment in services page

--- a/css/services.css
+++ b/css/services.css
@@ -17,13 +17,14 @@ div.services-container{
   background-color: blue;
   text-align: center;
   border-radius: 25px;
+  color:white;
 }
 .overlay {
   position: absolute;
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: #FFFFFF;
+  background-color: #FFFFFF; 
   overflow: hidden;
   width: 100%;
   height: 0;
@@ -63,10 +64,21 @@ div.services-container{
 }*/
 
 .image-container{
+  position: absolute;
   margin-top: 25px;
-  text-align: center;
+  margin-left:100px;
+  
+}
+h2{
+  position: relative;
+  margin-top: 150px;
 }
 img.services-imgs{
     border-radius: 50%; 
     width:150px; height:150px;
+}
+
+h3.overlay-title{
+  margin-top: 40px;
+  color:black;
 }
